<resources>

    <string name="action_bar_text">Welcome to Nihongo</string>
    <string name="app_name">Japanese Lang Coach</string>
    <string name="category_trivia">ⓘ KNOW ABOUT JAPAN</string>
    <string name="category_numbers">NUMBERS</string>
    <string name="category_phrases">PHRASES</string>
    <string name="category_colors">COLORS</string>
    <string name="category_Questions">COMMON QUESTIONS</string>
    <string name="category_familyMembers">FAMILY MEMBERS</string>
    <string name="category_occupations">COMMON OCCUPATIONS</string>
    <string name="category_places">TOURIST SPOTS</string>
    <string name="title_activity_numbers">NumbersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_colors">ColorsActivity</string>
    <string name="title_activity_familymembers">FamilymembersActivity</string>
    <string name="title_activity_phrases">PhrasesActivity</string>
    <string name="title_activity_commonquestions">CommonquestionsActivity</string>
    <string name="title_activity_commonoccupations">CommonoccupationsActivity</string>
    <string name="title_activity_touristspots">TouristspotsActivity</string>

</resources>